crates/stc_ts_file_analyzer/tests/pass/exprs/typeGuards/typeGuardOfFromPropNameInUnionType/4.ts
class A { a: string; }
class B { b: number; }



export function inParenthesizedExpression(x: A | B) {
    if ("a" in (x)) {
        let y: string = x.a;
    } else {
        let z: number = x.b;
    }
}

